# pacman

./: .ignore  .pdm-python  .pdm.toml  Presentation1.pptx  README.md  main.py  output.txt  pyproject.toml  run.ps1  run.sh  script.sh  settings.json  settings.toml
assets/levels/: 1.txt  2.txt  3.txt
data/: records.json  settings.json
src/: entities.py  game.py  level.py  levels.py  main.py  menu.py  settings.py  ui.py
src/engine/: animation.py  game.py  level.py  menu.py  settings.py  ui.py
src/engine/ui/: menu.py  menu_loader.py  menus.py  ui.py
src/entities/: entity.py  food.py  ghost.py  pacman.py  player.py  wall.py
