[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "seshotake", email = "seshotake@gmail.com"},
]
dependencies = [
    "pygame>=2.3.0",
    "toml>=0.10.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
