[project]
name = "pacman"
version = "0.1.0"
description = "Гра Пакман"
authors = [{ name = "Іван Ткачук", email = "tkachuk.ivan.v.chnu@edu.ua" }]
dependencies = ["pygame>=2.3.0"]
requires-python = ">=3.10"
license = { text = "MIT" }


[tool.pdm]

[tool.pdm.dev-dependencies]
dev = ["black>=23.3.0", "mypy>=1.2.0"]

[tool.pdm.scripts]
start = "python src/main.py"
[tool.poetry]
name = "pacman"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
